# Compressor

./: .neoconf.json  Cargo.toml
res/: three-dependencies-despair.txt
src/: compressor.rs  deps_download.rs  lib.rs  main.rs  popup.rs
src/app/: gui.rs  mod.rs  processes.rs
tests/: scratch.rs
